# https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
# https://setuptools.pypa.io/en/latest/index.html
[metadata]
name = pykafka
version = attr: pykafka.__version__
description = Simple demonstration of Kafka with Avro
author = Robert Hook
author_email = rahook@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheBellman/PyKafka
keywords = example, kafka
license_files =
	LICENSE
classifiers =
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3.9
	Development Status :: 3 - Alpha'
	Environment :: Console
	Intended Audience :: Developers
	Natural Language :: English
	Topic :: Utilities
project_urls =
	Documentation = https://github.com/TheBellman/PyKafka
	Source = https://github.com/TheBellman/PyKafka

# see https://pypi.org/classifiers/ for more classifiers

[options]
packages = find_namespace:
install_requires = 
	click >= 8.1.0
	faker >= 15.3.0
	confluent-kafka[avro] >= 1.9.2
tests_require =
	pytest >= 7.2.0
	pytest-mypy >= 0.10.3
package_dir=
    = src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pykafka =
	*.avsc
pykafka.avro =
	*.avsc

[options.entry_points]
console_scripts = 
	pykafka = pykafka.PyKafka:cli